{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 44,
  "lineage": "a04fbeb0-3bef-aa2b-516d-5a3e1d3b96e1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/networkInterfaces/ubuntu-vm-nic-master",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/publicIPAddresses/ubuntu-vm-public_ip-master",
                "subnet_id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/virtualNetworks/devops_network/subnets/devops_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastasia",
            "mac_address": "60-45-BD-56-74-7C",
            "name": "ubuntu-vm-nic-master",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "devops_rg",
            "tags": {
              "department": "IT",
              "environment": "Production"
            },
            "virtual_machine_id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Compute/virtualMachines/master"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.devops_subnet",
            "azurerm_virtual_network.devops_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/networkInterfaces/ubuntu-vm-nic-worker",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/publicIPAddresses/ubuntu-vm-public_ip-worker",
                "subnet_id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/virtualNetworks/devops_network/subnets/devops_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastasia",
            "mac_address": "00-0D-3A-80-B1-E2",
            "name": "ubuntu-vm-nic-worker",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "devops_rg",
            "tags": {
              "department": "IT",
              "environment": "Production"
            },
            "virtual_machine_id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Compute/virtualMachines/worker"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.devops_subnet",
            "azurerm_virtual_network.devops_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/networkSecurityGroups/security_group",
            "location": "eastasia",
            "name": "security_group",
            "resource_group_name": "devops_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "security_rule_inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "security_rule_outbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "department": "IT",
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/networkSecurityGroups/security_group/securityRules/security_rule_inbound",
            "name": "security_rule_inbound",
            "network_security_group_name": "security_group",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "devops_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/networkSecurityGroups/security_group/securityRules/security_rule_outbound",
            "name": "security_rule_outbound",
            "network_security_group_name": "security_group",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "devops_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "master",
            "id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/publicIPAddresses/ubuntu-vm-public_ip-master",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.94.57.18",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "ubuntu-vm-public_ip-master",
            "resource_group_name": "devops_rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "department": "IT",
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "worker",
            "fqdn": "worker.eastasia.cloudapp.azure.com",
            "id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/publicIPAddresses/ubuntu-vm-public_ip-worker",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.94.57.22",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "ubuntu-vm-public_ip-worker",
            "resource_group_name": "devops_rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "department": "IT",
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "devops_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/virtualNetworks/devops_network/subnets/devops_subnet",
            "name": "devops_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops_rg",
            "virtual_network_name": "devops_network"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.devops_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "security_group_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/virtualNetworks/devops_network/subnets/devops_subnet",
            "network_security_group_id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/networkSecurityGroups/security_group",
            "subnet_id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/virtualNetworks/devops_network/subnets/devops_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.devops_subnet",
            "azurerm_virtual_network.devops_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "devops_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "68d7c60e-a7f1-44a6-aec7-571c44d5f49c",
            "id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/virtualNetworks/devops_network",
            "location": "eastasia",
            "name": "devops_network",
            "resource_group_name": "devops_rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/virtualNetworks/devops_network/subnets/devops_subnet",
                "name": "devops_subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/ba85ac8f-51e0-413f-80a5-d6ab685dbd51/resourceGroups/devops_rg/providers/Microsoft.Network/networkSecurityGroups/security_group"
              }
            ],
            "tags": {
              "department": "IT",
              "environment": "production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}